--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Etch-a-Sketch</title>
 </head>
 <body>
-    <div id="container"></div>
+    <div id="title">Etch-a-Sketch</div>
+    <div id="container">
+        <div id="sketchframe"></div>
+    </div>
 </body>
 </html>
