--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <div id="title">Etch-a-Sketch</div>
-    <div id="container">
-        <div id="sketchframe"></div>
+    <div id="sketch_container">
+        <div id="sketch_frame"></div>
     </div>
+    <div id="change_size"></div>
 </body>
 </html>
