--- a/index.html
+++ b/index.html
@@ -10,8 +10,13 @@
 <body>
     <div id="title">Etch-a-Sketch</div>
     <div id="sketch_container">
+        <div id="control_panel">
+            <div class="slidecontainer">
+                <input type="range" min="5" max="100" value="16" class="slider" id="myRange">
+                <p>Size: <span id="frame_text_size"></span></p>
+            </div>
+        </div>
         <div id="sketch_frame"></div>
     </div>
-    <div id="change_size"></div>
 </body>
 </html>
