--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
                 <input type="range" min="5" max="100" value="16" class="slider" id="myRange">
                 <p>Size: <span id="frame_text_size"></span></p>
             </div>
+            <div class="sketch_buttons">
+                <button class="mouse-sensitive-button active" role="button">Mouse</button>
+                <button class="click-sensitive-button" role="button">Click</button>
+            </div>
         </div>
         <div id="sketch_frame"></div>
     </div>
