Added functionality for changing color based on mouse hover or mouse click

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
         <div id="control_panel">
             <div class="slidecontainer">
                 <input type="range" min="5" max="100" value="16" class="slider" id="myRange">
-                <p>Size: <span id="frame_text_size"></span></p>
+                <div class="control_panel_text">Size: <span id="frame_text_size"></span></div>
             </div>
             <div class="sketch_buttons">
+                <div class="control_panel_text">Sketch by:</div>
                 <button class="mouse-sensitive-button active" role="button">Mouse</button>
                 <button class="click-sensitive-button" role="button">Click</button>
             </div>
