--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,12 +8,13 @@
     <script type="text/javascript" src="script.js" defer></script>
     <title>Etch-a-Sketch</title>
 </head>
+
 <body>
     <div id="title">Etch-a-Sketch</div>
     <div id="sketch_container">
         <div id="control_panel">
             <div class="slidecontainer">
-                <input type="range" min="5" max="100" value="16" class="slider" id="myRange">
+                <input type="range" min="5" max="100" value="5" class="slider" id="myRange">
                 <div class="control_panel_text">Size: <span id="frame_text_size"></span></div>
             </div>
             <div class="sketch_buttons">
@@ -20,8 +22,17 @@
                 <button class="mouse-sensitive-button active" role="button">Mouse</button>
                 <button class="click-sensitive-button" role="button">Click</button>
             </div>
+            <div class="color_picker">
+                <label> <input type="radio" name="colorOption" value="randomColor" checked /> Random Color </label>
+                <label><input type="radio" name="colorOption" value="pickColor" /> Pick Color </label>
+                <input type="color" id="colorPicker" />
+                <br />
+                </div>
+                <div id="colorPickerContainer">
+            </div>
         </div>
         <div id="sketch_frame"></div>
     </div>
 </body>
+
 </html>
