--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
     <script type="text/javascript" src="script.js" defer></script>
-    <title>Etch-a-Sketch</title>
+    <title>🎨Etch-a-Sketch✏️</title>
 </head>
 
 <body>
-    <div id="title">Etch-a-Sketch</div>
+    <div id="title">🎨Etch-a-Sketch✏️</div>
     <div id="sketch_container">
         <div id="control_panel">
             <div class="slidecontainer">
